bin/testsuite/tests/compiler/src/errors/compiler5922.swg
#global testerror "Err0613"

#test
{
    let a = #gettag(0, s32, 0)
}
